--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
     "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
+    "save": "^2.5.0",
     "swiper": "^8.1.6",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
