--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "de_nandan",
   "homepage": "https://DE-Nandan.github.io/port_react",
   "version": "0.1.0",
   "private": true,
